--- a/styles.css
+++ b/styles.css
@@ -1,20 +1,84 @@
-body{
-    font-family: Helvetica, sans-serif;
+body {
+    font-family: kanit, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: darkgoldenrod;
+    background: white;
 }
 
-nav{
-    background: chocolate;
+
+nav {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
+    padding: 50px 0;
+
 }
 
-nav.li{
+
+ul {
     list-style: none;
     padding: 0;
-    margin: 0;
     display: flex;
+    justify-content:flex-start;
+    gap: 5%;
+    margin: 0;
+    width: 70%;
+}
+
+a {
+    position: relative;
+    color: black;
+    text-decoration: none;
+    font-size: 3em;
+    padding: 0px 5px;
+    transition: color 0.6s;
+    cursor: pointer;
+}
+
+a::before{
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background: #c9fafa;
+    height: 20%;
+}
+
+
+a::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 0;
+    background: #c9fafa;
+    transition: height 0.5s ease-in-out;
+    z-index: -1;
+    border-radius: 5%;
+}
+
+
+a:hover::after {
+    height: 100%;
+}
+
+
+@media (max-width: 768px) {
+    nav {
+        flex-direction: column;
+    }
+
+    ul {
+        flex-direction: column;
+        width: 100%;
+        text-align: center;
+    }
+
+    a {
+        font-size: 1.2em;
+        display: block;
+        padding: 10px;
+    }
 }
