--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,8 @@ body {
     margin: 0;
     padding: 0;
     background: white;
+    display: flex;
+    flex-wrap: wrap;
 }
 
 
@@ -11,6 +13,7 @@ nav {
     justify-content: center;
     align-items: center;
     padding: 50px 0;
+    width: 100%;
 
 }
 
@@ -19,7 +22,7 @@ ul {
     list-style: none;
     padding: 0;
     display: flex;
-    justify-content:flex-start;
+    justify-content: flex-start;
     gap: 5%;
     margin: 0;
     width: 70%;
@@ -35,7 +38,7 @@ a {
     cursor: pointer;
 }
 
-a::before{
+a::before {
     content: "";
     position: absolute;
     left: 0;
@@ -64,6 +67,37 @@ a:hover::after {
     height: 100%;
 }
 
+#img-container {
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+}
+
+#meWithHair {
+    width: 700px;
+    height: 700px;
+    border-radius: 50%;
+    object-fit: cover;
+    object-position: 70% 80%;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+    border: 5px solid #c9fafa;
+    transition: all 0.3s ease-in-out;
+    margin-right: 10%;
+    cursor: pointer;
+}
+
+#thugLifeGlasses{
+    width: 300px;
+    height: 300px;
+    position: absolute;
+    top: 340px;
+    left: 1790px;
+    display: none;
+}
+
+#meWithHair:hover {
+    border: 20px solid #c9fafa;
+}
 
 @media (max-width: 768px) {
     nav {
