projects boxes added

--- a/styles.css
+++ b/styles.css
@@ -84,6 +84,7 @@ a:hover::after {
     justify-content: flex-start;
     flex-direction: column;
     box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
+    flex-wrap: wrap;
 }
 
 #name{
