--- a/css/projects.css
+++ b/css/projects.css
@@ -16,7 +16,7 @@
     height: 600px;
     border-radius: 10px;
     display: flex;
-    align-items: flex-start;
+    align-items: center;
     justify-content: center;
     text-align: center;
     color: #fff;
@@ -25,6 +25,7 @@
     transition: transform 0.3s ease, box-shadow 0.3s ease;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
     cursor: pointer;
+    flex-wrap: wrap;
 }
 
 .project:hover {
@@ -32,6 +33,38 @@
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
     background: #5a5e42;
 }
+
+#project1Button {
+    background: #95a543;
+    width: 200px;
+    height: 100px;
+    color: #fff;
+    font-size: 3rem;
+    font-weight: bold;
+    padding: 0.8rem 1.5rem;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+}
+
+#project1Button:hover {
+    background: #b1c637;
+    transform: translateY(-7px);
+    box-shadow: 0 8px 15px rgba(0, 0, 0, 0.3);
+}
+
+#project1Button:active {
+    transform: translateY(7px);
+    box-shadow: 0 3px 7px rgba(0, 0, 0, 0.2);
+}
+#project1Button::before,
+#project1Button::after {
+    content: none !important;
+    display: none !important;
+}
+
 
 
 @media (max-width: 768px) {
