--- a/css/weeksLeft.css
+++ b/css/weeksLeft.css
@@ -1,14 +1,117 @@
-body{
+body {
     background: #000;
     display: flex;
     flex-direction: column;
-
     align-items: center;
     height: 100vh;
 }
 
-#choosenAge{
+#weeksLeftForm {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+
+#sliderInput {
+    -webkit-appearance: none;
+    width: 80%;
+    height: 50px;
+    border-radius: 10px;
+    margin-top: 20px;
+}
+
+#sliderInput::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    width: 50px;
+    height: 50px;
+    background: #e37c7c;
+    border: 2px solid #3498db;
+    border-radius: 50%;
+    cursor: pointer;
+    transition: 0.5s;
+}
+
+#sliderInput::-webkit-slider-thumb:hover {
+    scale: 1.1;
+}
+
+#choosenAge {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 100px;
+    color: white;
     width: 200px;
     height: 200px;
-    background: #6d7154;
+}
+
+#genderDiv {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.genderBox {
+    width: 600px;
+    height: 400px;
+    color: black;
+    font-size: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: white;
+    margin: 40px;
+    border-radius: 15px;
+    cursor: pointer;
+    transition: 0.5s;
+}
+
+.genderBox:hover {
+    background: #e37c7c;
+    scale: 1.1;
+}
+
+.clickedGenderBox {
+    width: 600px;
+    height: 400px;
+    color: black;
+    font-size: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #fd6767;
+    margin: 20px;
+    border-radius: 15px;
+    cursor: pointer;
+    transition: 0.5s;
+    scale: 1.1;
+}
+
+#weeksLeftButton {
+    width: 800px;
+    height: 200px;
+    border-radius: 20px;
+    margin: 100px;
+    font-size: 100px;
+    cursor: pointer;
+
+    transition: 0.5s;
+}
+#weeksLeftButton:hover {
+    background: #e37c7c;
+    scale: 1.1;
+}
+
+@keyframes shake {
+    0%, 100% { transform: translateX(0); }
+    25% { transform: translateX(-20px); }
+    50% { transform: translateX(5px); }
+    75% { transform: translateX(-20px); }
+}
+
+.shake {
+    animation: shake 0.4s ease;
 }
