--- a/css/weeksLeft.css
+++ b/css/weeksLeft.css
@@ -123,3 +123,42 @@ body {
     background: lawngreen;
     margin: 2px;
 }
+.weeksLeftDiv{
+    height: 10px;
+    width: 10px;
+    border-radius: 50%;
+    background: #fd6767;
+    margin: 2px;
+}
+
+#outerDiv{
+    background: #000;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    flex-wrap: wrap;
+    align-content: flex-start;
+}
+
+#illustrationDiv {
+    background: #000;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    height: 100vh;
+    margin: 50px;
+    flex-wrap: wrap;
+    align-content: flex-start;
+}
+.numberDiv{
+    width: 150px;
+    height: 150px;
+    color: white;
+    font-size: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
