--- a/css/weeksLeft.css
+++ b/css/weeksLeft.css
@@ -148,6 +148,7 @@ body {
     flex-direction: row;
     align-items: center;
     height: 100vh;
+    width: 100%;
     margin: 50px;
     flex-wrap: wrap;
     align-content: flex-start;
@@ -160,5 +161,11 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+}
 
+.endResultDiv{
+    display: flex;
+    flex-direction: row;
+    color: #ffffff;
+    font-size: 50px;
 }
