--- a/css/weeksLeft.css
+++ b/css/weeksLeft.css
@@ -100,30 +100,40 @@ body {
 
     transition: 0.5s;
 }
+
 #weeksLeftButton:hover {
     background: #e37c7c;
     scale: 1.1;
 }
 
 @keyframes shake {
-    0%, 100% { transform: translateX(0); }
-    25% { transform: translateX(-20px); }
-    50% { transform: translateX(5px); }
-    75% { transform: translateX(-20px); }
+    0%, 100% {
+        transform: translateX(0);
+    }
+    25% {
+        transform: translateX(-20px);
+    }
+    50% {
+        transform: translateX(5px);
+    }
+    75% {
+        transform: translateX(-20px);
+    }
 }
 
 .shake {
     animation: shake 0.4s ease;
 }
 
-.weeksLivedDiv{
+.weeksLivedDiv {
     height: 10px;
     width: 10px;
     border-radius: 50%;
     background: lawngreen;
     margin: 2px;
 }
-.weeksLeftDiv{
+
+.weeksLeftDiv {
     height: 10px;
     width: 10px;
     border-radius: 50%;
@@ -131,7 +141,7 @@ body {
     margin: 2px;
 }
 
-#outerDiv{
+#outerDiv {
     background: #000;
     display: flex;
     flex-direction: row;
@@ -147,13 +157,14 @@ body {
     display: flex;
     flex-direction: row;
     align-items: center;
-    height: 100vh;
+    height: 50vh;
     width: 100%;
     margin: 50px;
     flex-wrap: wrap;
     align-content: flex-start;
 }
-.numberDiv{
+
+.numberDiv {
     width: 150px;
     height: 150px;
     color: white;
@@ -163,10 +174,10 @@ body {
     align-items: center;
 }
 
-.endResultDiv{
+.endResultDiv {
     display: flex;
     flex-direction: row;
     color: #ffffff;
-    font-size: 50px;
+    font-size: 30px;
     gap: 50px;
 }
