--- a/css/indexV2.css
+++ b/css/indexV2.css
@@ -1,4 +1,4 @@
-body{
+body {
     height: 100vh;
     width: 100vw;
     margin: 0;
@@ -9,25 +9,25 @@ body{
 
 }
 
-.header{
+.header {
     display: flex;
     justify-content: flex-end;
     align-items: center;
     padding: 20px 200px 20px 20px;
 }
 
-.link{
+.link {
     cursor: pointer;
     margin: 20px;
     font-size: 16px;
     transition: 0.2s;
 }
 
-.link:hover{
+.link:hover {
     scale: 1.1;
 }
 
-.mainContainer{
+.mainContainer {
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -38,7 +38,7 @@ body{
     gap: 100px;
 }
 
-.mainText{
+.mainText {
     margin-top: 50px;
     margin-bottom: 50px;
     width: 500px;
@@ -58,14 +58,14 @@ body{
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
 }
 
-.btnWrapper{
+.btnWrapper {
     display: flex;
     flex-direction: row;
-    justify-content:  flex-start;
+    justify-content: flex-start;
     gap: 10px;
 }
 
-#projectBtn{
+#projectBtn {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -77,7 +77,8 @@ body{
     cursor: pointer;
     transition: 0.2s ease-in;
 }
-#contactBtn{
+
+#contactBtn {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -90,16 +91,16 @@ body{
     transition: 0.2s ease-in;
 }
 
-.btn:hover{
+.btn:hover {
     scale: 1.1;
 }
 
-#firstPartHeaderText{
+#firstPartHeaderText {
     font-size: 80px;
     font-weight: 150;
 }
 
-.headerText{
+.headerText {
     font-size: 60px;
     font-weight: 400;
 }
@@ -114,6 +115,7 @@ body{
         opacity: 0;
     }
 }
+
 @keyframes swipeRight {
     0% {
         transform: translateX(0);
@@ -122,20 +124,20 @@ body{
     100% {
         transform: translateX(100%);
         opacity: 0;
-        display: none;
     }
 }
 
 .swipe-left {
     animation: swipeLeft 0.9s ease-in-out forwards;
 }
+
 .swipe-right {
     animation: swipeRight 0.9s ease-in-out forwards;
 }
 
 /* Contact part ----------------------------------*/
 
-#contactMainContainer{
+#contactMainContainer {
     display: none;
     width: 100vw;
     height: 80vh;
@@ -144,8 +146,22 @@ body{
     align-items: center;
     gap: 100px;
 }
+
 .swipe-in {
     animation: swipeIn 0.9s ease-in-out forwards;
+    display: flex;
+}
+.swipe-out {
+    animation: swipeOut 0.9s ease-in-out forwards;
+}
+
+.swipeBackToMainPage {
+    animation: swipeBackToMainPage 0.9s ease-in-out forwards;
+    display: flex;
+}
+
+.swipeToProjects{
+    animation: swipeBackToMainPage 0.9s ease-in-out forwards;
     display: flex;
 }
 
@@ -157,26 +173,92 @@ body{
     100% {
         transform: translateX(0);
         opacity: 1;
-        display: flex;
     }
 }
 
-.contactDiv{
+@keyframes swipeOut {
+    0% {
+        transform: translateX(0);
+        opacity: 1;
+    }
+    100% {
+        transform: translateX(-100%);
+        opacity: 0;
+    }
+
+}
+
+@keyframes swipeBackToMainPage {
+    0% {
+        transform: translateX(100%);
+        opacity: 0;
+    }
+    100% {
+        transform: translateX(0);
+        opacity: 1;
+    }
+}
+
+
+.contactDiv {
     width: 150px;
     height: 150px;
 }
-.contactLogo{
+
+.contactLogo {
     max-height: 100%;
     max-width: 100%;
     cursor: pointer;
     transition: 0.5s;
 }
-.contactLogo:hover{
+
+.contactLogo:hover {
     transform: scale(1.1);
 }
-.goBackBtn{
+
+.goBackBtn {
     width: 20%;
     height: 20%;
     background: none;
     border: none;
+}
+
+/*PROJECTS PAGE*/
+#projectsMainContainer{
+    display: none;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 50px   ;
+    width: 100%;
+    height: 80vh;
+}
+
+.projectContainer{
+    display: flex;
+    flex-direction: column;
+    height: 400px;
+    width: 300px;
+    background: #faf8f8;
+    border-radius: 10px;
+    overflow-wrap: break-word;
+    word-break: break-word;
+    overflow: hidden;
+}
+.projectImageContainer{
+    height: 150px;
+    width: 300px;
+    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
+}
+.projectImage{
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    border-radius: 10px;
+}
+.projectHeader{
+    margin-left: 15px;
+}
+.projectText{
+    margin-left: 15px;
 }
